tests/ui/consts/issue-66693-panic-in-array-len.stderr
error: argument to `panic!()` in a const context must have type `&str`
  --> $DIR/issue-66693-panic-in-array-len.rs:6:20
   |
LL |     let _ = [0i32; panic!(2f32)];
   |                    ^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/issue-66693-panic-in-array-len.rs:10:21
   |
LL |     let _ = [false; panic!()];
   |                     ^^^^^^^^ evaluation panicked: explicit panic

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
